--- a/source/scss/layout/_footer.scss
+++ b/source/scss/layout/_footer.scss
@@ -1,5 +1,5 @@
 .site__footer {
-  background: $color-footer-bg;
-  color: $color-footer;
+  background: $footer-bgcolor;
+  color: $footer-color;
   padding: 2rem 0;
 }
