--- a/source/scss/layout/_header.scss
+++ b/source/scss/layout/_header.scss
@@ -1,6 +1,6 @@
 .site__header {
-  background: $color-header-bg;
-  color: $color-header;
+  background: $header-bgcolor;
+  color: $header-color;
   padding: 2rem 0;
 }
 
