--- a/source/scss/_colors.scss
+++ b/source/scss/_colors.scss
@@ -1,65 +1,65 @@
 // Base
 
-$color-base: #303030;
-$color-base-bg: #fafafa;
+$base-bgcolor: #fafafa;
+$base-color: #303030;
 
-$color-headings: inherit;
+$heading-color: inherit;
 
 // Main Colors
 
-$color-primary: #2e719e;
-$color-primary-active: lighten($color-primary, 10%);
-$color-primary-hover: darken($color-primary, 10%);
+$primary-color: #2e719e;
+$primary-color-active: lighten($primary-color, 10%);
+$primary-color-hover: darken($primary-color, 10%);
 
-$color-secondary: #964db3;
-$color-secondary-active: lighten($color-secondary, 10%);
-$color-secondary-hover: darken($color-secondary, 10%);
+$secondary-color: #964db3;
+$secondary-color-active: lighten($secondary-color, 10%);
+$secondary-color-hover: darken($secondary-color, 10%);
 
-$color-success: #367d53;
-$color-success-active: lighten($color-success, 10%);
-$color-success-hover: darken($color-success, 10%);
+$success-color: #367d53;
+$success-color-active: lighten($success-color, 10%);
+$success-color-hover: darken($success-color, 10%);
 
-$color-warning: #f1c40f;
-$color-warning-active: lighten($color-warning, 10%);
-$color-warning-hover: darken($color-warning, 10%);
+$warning-color: #f1c40f;
+$warning-color-active: lighten($warning-color, 10%);
+$warning-color-hover: darken($warning-color, 10%);
 
-$color-error: #b83c2e;
-$color-error-active: lighten($color-error, 10%);
-$color-error-hover: darken($color-error, 10%);
+$error-color: #b83c2e;
+$error-color-active: lighten($error-color, 10%);
+$error-color-hover: darken($error-color, 10%);
 
 // Links
 
-$color-link: $color-primary;
-$color-link-active: lighten($color-link, 10%);
-$color-link-hover: darken($color-link, 10%);
+$link-color: $primary-color;
+$link-color-active: lighten($link-color, 10%);
+$link-color-hover: darken($link-color, 10%);
 
 // Border
 
-$color-border: #bdbdbd;
-$color-border-hover: darken($color-border, 20%);
+$border-color: #bdbdbd;
+$border-color-hover: darken($border-color, 20%);
 
 // Typography
 
-$color-subline: #808080;
+$subline-color: #808080;
 
 // Layout
 
-$color-header: inherit;
-$color-header-bg: inherit;
+$header-color: inherit;
+$header-bgcolor: inherit;
 
-$color-footer: inherit;
-$color-footer-bg: inherit;
+$footer-color: inherit;
+$footer-bgcolor: inherit;
 
 // Buttons
 
-$color-btn: #fff;
-$color-btn-bg: #95a5a6;
-$color-btn-hover: #fff;
-$color-btn-hover-bg: darken($color-btn-bg, 10%);
+$btn-bgcolor: #95a5a6;
+$btn-bgcolor-hover: darken($btn-bgcolor, 10%);
+$btn-color: #fff;
+$btn-color-hover: darken($btn-color, 10%);
 
 // Input
 
-$color-input: $color-base;
-$color-input-bg: #e8e8e8;
+$input-color: $base-color;
+$input-bgcolor: #e8e8e8;
 
-$color-placeholder: $color-border;
+$placeholder-color: $border-color;
