--- a/source/css/style.css
+++ b/source/css/style.css
@@ -119,6 +119,9 @@ code {
   font-family: "Courier New", monospace;
   font-size: 1rem; }
 
+details {
+  margin: 0 0 1.5rem; }
+
 dialog {
   border: 0;
   display: none;
