--- a/source/scss/_variables.scss
+++ b/source/scss/_variables.scss
@@ -6,7 +6,7 @@ $base-font-family: Arial;
 $base-font-family-fallback: sans-serif;
 $base-font-size: 1rem;
 $base-font-weight: 400;
-$base-line-height: 1.5em;
+$base-line-height: 1.5;
 
 $font-family-headings: inherit;
 $font-size-h1: 2rem;
