remove unused classes

--- a/source/templates/pages/ui.html
+++ b/source/templates/pages/ui.html
@@ -234,7 +234,7 @@ description: "Description goes here"
 
     <h3>Unorderd List</h3>
 
-    <ul class="list">
+    <ul>
       <li>List Item 1</li>
       <li>List Item 2
         <ul>
@@ -250,7 +250,7 @@ description: "Description goes here"
 
     <h3>Orderd List</h3>
 
-    <ol class="list">
+    <ol>
       <li>List Item 1</li>
       <li>List Item 2
         <ol>
@@ -279,7 +279,7 @@ description: "Description goes here"
 
     <h3>Table</h3>
 
-    <table class="table">
+    <table>
       <caption>Table Caption</caption>
       <colgroup>
         <col span="2" style="background-color: #ccc;">
