--- a/source/css/style.css
+++ b/source/css/style.css
@@ -788,13 +788,11 @@ video {
   margin-left: auto;
   margin-right: auto; }
 
-.lower {
+.text--lower {
   text-transform: lowercase; }
-
-.upper {
+.text--upper {
   text-transform: uppercase; }
-
-.text-center {
+.text--center {
   text-align: center; }
 
 .invisible {
