--- a/source/scss/_colors.scss
+++ b/source/scss/_colors.scss
@@ -57,6 +57,10 @@ $btn-bgcolor-hover: darken($btn-bgcolor, 10%);
 $btn-color: #fff;
 $btn-color-hover: darken($btn-color, 10%);
 
+// Code
+
+$code-bgcolor: #fff;
+
 // Input
 
 $input-color: $base-color;
