--- a/source/scss/_base.scss
+++ b/source/scss/_base.scss
@@ -148,7 +148,7 @@ canvas {
 
 code {
   font-family: $code-font-family, $code-font-family-fallback;
-  font-size: 1rem;
+  font-size: .75rem;
 }
 
 details {
@@ -334,9 +334,11 @@ p {
 }
 
 pre {
+  background-color: $code-bgcolor;
   display: block;
   margin: 0 0 1.5rem;
   overflow: auto;
+  padding: 1rem;
   word-break: break-all;
   word-wrap: break-word;
 }
