--- a/source/css/style.css
+++ b/source/css/style.css
@@ -117,7 +117,7 @@ canvas {
 
 code {
   font-family: "Courier New", monospace;
-  font-size: .75rem; }
+  font-size: .75em; }
 
 details {
   margin: 0 0 1.5rem; }
@@ -303,8 +303,7 @@ pre {
   margin: 0 0 1.5rem;
   overflow: auto;
   padding: 1rem;
-  word-break: break-all;
-  word-wrap: break-word; }
+  word-break: break-all; }
 
 q {
   quotes: '\201C' '\201D' '\2018' '\2019'; }
