--- a/source/scss/_variables.scss
+++ b/source/scss/_variables.scss
@@ -43,11 +43,11 @@ $grid-gutter: 2%;
 
 // Media Queries
 
-$media-micro: 20rem; // 320
-$media-tiny: 30rem; // 480
-$media-small: 48rem; // 768
-$media-medium: 60rem; // 960
-$media-large: 80rem; // 1280
+$media-micro: 20em; // 320
+$media-tiny: 30em; // 480
+$media-small: 48em; // 768
+$media-medium: 60em; // 960
+$media-large: 80em; // 1280
 
 // Paths
 
