--- a/source/scss/modules/_forms.scss
+++ b/source/scss/modules/_forms.scss
@@ -1,3 +1,82 @@
+$input-button-bgcolor: #95a5a6;
+$input-button-bgcolor-hover: darken($input-button-bgcolor, 10%);
+$input-button-color: #fff;
+
+$input-bgcolor: #e8e8e8;
+$input-color: $base-color;
+
+$placeholder-color: $border-color;
+
+
+input,
+select,
+textarea {
+  border: 0;
+  border-radius: 0;
+  color: inherit;
+  font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family, $base-font-family-fallback;
+  margin: 0;
+  outline-color: $primary-color;
+  padding: 0;
+  transition: all .3s;
+}
+
+input,
+textarea {
+
+  &::placeholder {
+    color: $placeholder-color;
+  }
+
+}
+
+input {
+
+  &[type="reset"],
+  &[type="submit"] {
+    -webkit-appearance: button;
+    background: $input-button-bgcolor;
+    color: $input-button-color;
+    cursor: pointer;
+
+    &:focus,
+    &:hover {
+      background: $input-button-bgcolor-hover;
+    }
+
+  }
+
+  &[type="search"] {
+    -webkit-appearance: textfield;
+  }
+
+}
+
+textarea {
+  max-width: 100%;
+  overflow: auto;
+  resize: none;
+  vertical-align: top;
+  width: 100%;
+}
+
+label {
+  color: inherit;
+  display: inline-block;
+  font: inherit;
+  margin: 0;
+  max-width: 100%;
+  padding: 0;
+  width: auto;
+}
+
+legend {
+  border: 0;
+  display: block;
+  padding: 0 .25rem;
+  position: relative;
+}
+
 .form {
   margin-bottom: $margin-element-bottom;
 
