--- a/source/scss/modules/_tables.scss
+++ b/source/scss/modules/_tables.scss
@@ -1,3 +1,18 @@
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+  margin: 0 0 1.5rem;
+  text-align: left;
+  width: 100%;
+}
+
+caption,
+td,
+th {
+  padding: 0;
+  vertical-align: top;
+}
+
 .table {
   margin-bottom: $margin-element-bottom;
   -webkit-overflow-scrolling: touch;
