--- a/source/css/style.css
+++ b/source/css/style.css
@@ -265,23 +265,23 @@ video {
   height: auto;
   max-width: 100%; }
 
-.breadcrumb ul {
+.breadcrumb {
   list-style: none;
   margin: 0;
   padding: 0;
   margin: 0 -.5rem; }
-  .breadcrumb ul:before, .breadcrumb ul:after {
+  .breadcrumb:before, .breadcrumb:after {
     content: ' ';
     display: table; }
-  .breadcrumb ul:after {
+  .breadcrumb:after {
     clear: both; }
-  .breadcrumb ul > li {
+  .breadcrumb > li {
     margin: 0; }
-.breadcrumb li {
-  float: left; }
-.breadcrumb a {
-  display: block;
-  padding: .25rem .5rem; }
+  .breadcrumb li {
+    float: left; }
+  .breadcrumb a {
+    display: block;
+    padding: .25rem .5rem; }
 
 .btn {
   background: #95a5a6;
