--- a/source/scss/modules/_pagination.scss
+++ b/source/scss/modules/_pagination.scss
@@ -12,11 +12,11 @@
     padding: .25rem .5rem;
   }
 
-  .prev {
+  &__previous {
     float: left;
   }
 
-  .next {
+  &__next {
     float: right;
   }
 
