--- a/source/templates/pages/ui.html
+++ b/source/templates/pages/ui.html
@@ -956,17 +956,17 @@ add(a, b);</code></pre>
           <h3>Pagination</h3>
 
           <ul class="pagination">
-            <li class="prev"><a href="#">←</a></li>
+            <li class="pagination__previous"><a href="#">←</a></li>
             <li><a href="#">1</a></li>
             <li><a href="#">2</a></li>
             <li><a href="#">3</a></li>
-            <li class="next"><a href="#">→</a></li>
+            <li class="pagination__next"><a href="#">→</a></li>
           </ul>
 
           <pre><code>&lt;ul class="pagination"&gt;
-  &lt;li class="prev"&gt;&lt;a href="#"&gt;←&lt;/a&gt;&lt;/li&gt;
+  &lt;li class="pagination__previous"&gt;&lt;a href="#"&gt;←&lt;/a&gt;&lt;/li&gt;
   &lt;li&gt;&lt;a href="#"&gt;1&lt;/a&gt;&lt;/li&gt;
-  &lt;li class="next"&gt;&lt;a href="#"&gt;→&lt;/a&gt;&lt;/li&gt;
+  &lt;li class="pagination__next"&gt;&lt;a href="#"&gt;→&lt;/a&gt;&lt;/li&gt;
 &lt;/ul&gt;</code></pre>
 
         </section>
