--- a/source/templates/pages/ui.html
+++ b/source/templates/pages/ui.html
@@ -823,7 +823,7 @@ add(a, b);</code></pre>
 
           <h3>Navigation Dropdown</h3>
 
-          <nav class="nav nav--inline nav--dropdown" role="navigation" itemscope itemtype="http://schema.org/SiteNavigationElement">
+          <nav class="navigation navigation--inline navigation--dropdown" role="navigation" itemscope itemtype="http://schema.org/SiteNavigationElement">
             <ul>
               <li><a href="#" itemprop="url"><span itemprop="name">Level 1 Item 1</span></a></li>
               <li><a href="#" aria-haspopup="true" itemprop="url"><span itemprop="name">Level 1 Item 2</span></a>
@@ -847,7 +847,7 @@ add(a, b);</code></pre>
             </ul>
           </nav>
 
-          <pre><code>&lt;nav class="nav nav--inline nav--dropdown" role="navigation" itemscope itemtype="http://schema.org/SiteNavigationElement"&gt;
+          <pre><code>&lt;nav class="navigation navigation--inline navigation--dropdown" role="navigation" itemscope itemtype="http://schema.org/SiteNavigationElement"&gt;
   &lt;ul&gt;
     &lt;li&gt;&lt;a href="#" itemprop="url"&gt;&lt;span itemprop="name"&gt;Level 1 Item 1&lt;/span&gt;&lt;/a&gt;&lt;/li&gt;
     &lt;li&gt;&lt;a href="#" aria-haspopup="true" itemprop="url"&gt;&lt;span itemprop="name"&gt;Level 1 Item 2&lt;/span&gt;&lt;/a&gt;
@@ -873,7 +873,7 @@ add(a, b);</code></pre>
 
           <h3>Navigation Dropdown Right</h3>
 
-          <nav class="nav nav--dropdown nav--dropdown--right">
+          <nav class="navigation navigation--dropdown navigation--dropdown--right">
 
             <ul>
               <li><a href="#">Level 1 Item 1</a></li>
