--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -22,7 +22,7 @@
 'modules/forms',
 'modules/gallery',
 'modules/media',
-'modules/navs',
+'modules/navigations',
 'modules/pagination',
 'modules/tables';
 
