--- a/source/scss/helpers/_utilities.scss
+++ b/source/scss/helpers/_utilities.scss
@@ -25,6 +25,13 @@
   margin-right: auto;
 }
 
+.sticky {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  transform: translateZ(0);
+}
+
 // Typography //
 
 .text {
