mode lists into module

--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -21,6 +21,7 @@
 'modules/embed',
 'modules/forms',
 'modules/gallery',
+'modules/lists',
 'modules/media',
 'modules/navigations',
 'modules/pagination',
