--- a/source/scss/modules/_embed.scss
+++ b/source/scss/modules/_embed.scss
@@ -1,3 +1,24 @@
+embed,
+iframe {
+  border: 0;
+  width: 100%;
+}
+
+audio,
+video {
+  display: inline-block;
+  vertical-align: baseline;
+}
+
+audio:not([controls]) {
+  display: none;
+}
+
+video {
+  height: auto;
+  max-width: 100%;
+}
+
 .embed {
   height: 0;
   margin-bottom: $margin-element-bottom;
