--- a/source/scss/_base.scss
+++ b/source/scss/_base.scss
@@ -62,16 +62,10 @@ summary {
   display: block;
 }
 
-audio,
 canvas,
-progress,
-video {
+progress {
   display: inline-block;
   vertical-align: baseline;
-}
-
-audio:not([controls]) {
-  display: none;
 }
 
 a {
@@ -170,13 +164,6 @@ dialog {
 
 }
 
-embed,
-iframe,
-svg {
-  border: 0;
-  width: 100%;
-}
-
 fieldset {
   border: 0;
   margin: 0;
@@ -269,16 +256,13 @@ sub {
 }
 
 svg {
+  border: 0;
   height: auto;
   max-width: 100%;
+  width: 100%;
 
   &:not(:root) {
     overflow: hidden;
   }
 
-}
-
-video {
-  height: auto;
-  max-width: 100%;
 }
