--- a/source/scss/modules/_embed.scss
+++ b/source/scss/modules/_embed.scss
@@ -1,3 +1,18 @@
+audio,
+video {
+  display: inline-block;
+  vertical-align: baseline;
+}
+
+audio:not([controls]) {
+  display: none;
+}
+
+video {
+  height: auto;
+  max-width: 100%;
+}
+
 .embed {
   height: 0;
   margin-bottom: $margin-element-bottom;
@@ -11,6 +26,7 @@
   embed,
   iframe,
   object {
+    border: 0;
     height: 100%;
     left: 0;
     position: absolute;
